First operational version
I obviously will need to build (maybe using webpack) but for now I'll use lib/index.js directly

--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "email": "hyzual@gmail.com",
     "url": ""
   },
-  "files": [
-    "dist"
-  ],
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "keywords": [
     "dependencies",
     "graph"
