Use yargs to deal with CLI options
We now allow calling knotsjs with multiple files to parse. Right now, only the first
file is actually parsed (we will deal with multiple files in a future commit).

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knotsjs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "See the dependencies in your code as a graph and use it to make your code more maintainable",
   "homepage": "",
   "author": {
@@ -47,6 +47,7 @@
   "dependencies": {
     "acorn": "^3.0.4",
     "escope": "^3.6.0",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "yargs": "^4.3.2"
   }
 }
