--- a/package.json
+++ b/package.json
@@ -14,34 +14,13 @@
     "graph"
   ],
   "devDependencies": {
-    "eslint": "^2.1.0",
-    "eslint-config-xo-space": "^0.10.0",
-    "babel-eslint": "^4.1.8",
-    "eslint-plugin-babel": "^3.1.0",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-istanbul": "^0.10.3",
-    "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0",
-    "gulp-babel": "^5.1.0",
-    "del": "^2.0.2",
-    "babel-core": "^5.5.0",
-    "isparta": "^3.0.3"
-  },
-  "eslintConfig": {
-    "extends": "xo-space/esnext",
-    "env": {
-      "mocha": true
-    }
+    "istanbul": "^0.4.3",
+    "jasmine": "^2.4.1"
   },
   "repository": "Hyzual/knotsjs",
   "scripts": {
-    "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "test": "jasmine test/**/*-test.js",
+    "coverage": "istanbul cover test/**/*-test.js && istanbul report"
   },
   "license": "GPL-3.0",
   "dependencies": {
