Replace our custom graph implementation with jsgraph
As of yet we transform it to avoid breaking our interface, but we can use it to safely traverse our graph, it'll handle cycles for us.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "devDependencies": {
     "istanbul": "^0.4.3",
-    "jasmine": "^2.4.1"
+    "jasmine": "^2.4.1",
+    "jsgraph": "^0.6.1"
   },
   "repository": "Hyzual/knotsjs",
   "scripts": {
